<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/tV_auswahl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tV_auswahl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="72dp"
        android:text="@string/Auswahl_Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="124dp"
        android:text="@string/IP_Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV_auswahl" />

    <EditText
        android:id="@+id/eT_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:autofillHints="@string/IP_Hint"
        android:ems="10"
        android:hint="@string/IP_Hint"
        android:inputType="number|textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button_best"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="164dp"
        android:text="@string/Confirmation_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_ip" />

    <RadioGroup
        android:id="@+id/rg_auswahl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV_auswahl">

        <RadioButton
            android:id="@+id/rb_Acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/accelerometer" />


        <RadioButton
            android:id="@+id/rB_mqtt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/mqtt" />
    </RadioGroup>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="178dp"
        android:layout_marginBottom="71dp"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/Sound"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button_best"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_ip"
        android:defaultValue="true"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
</androidx.constraintlayout.widget.ConstraintLayout>